--- a/examples/aws/eks-public/gpu_instances.tfvars.example
+++ b/examples/aws/eks-public/gpu_instances.tfvars.example
@@ -1,21 +1,18 @@
 # GPU Instance Types for EKS
 #
-# This file contains additional GPU instance configurations that can be used
-# with the EKS cluster. To use these configurations, include this file when
-# running terraform:
+# This file contains GPU instance configurations that can be used
+# with the EKS cluster. To use these configurations, copy this file to
+# gpu_instances.tfvars and include it when running terraform:
 #
+#   cp gpu_instances.tfvars.example gpu_instances.tfvars
 #   terraform plan -var-file="gpu_instances.tfvars"
 #   terraform apply -var-file="gpu_instances.tfvars"
 #
 # You can also selectively enable specific GPU types by setting the
 # node_group_gpu_types variable.
-#
-# Note: Entries here will override defaults with the same key (e.g., T4 below
-# overrides the default T4 to add more instance types).
 
-# GPU types - overrides defaults and adds new types
-additional_gpu_types = {
-  # Override default T4 to include additional instance types
+# GPU types configuration
+gpu_instance_types = {
   "T4" = {
     product_name   = "Tesla-T4"
     instance_types = ["g4dn.xlarge", "g4dn.2xlarge", "g4dn.4xlarge"]
@@ -23,6 +20,10 @@ additional_gpu_types = {
   "T4-4x" = {
     product_name   = "Tesla-T4"
     instance_types = ["g4dn.12xlarge"]
+  }
+  "A10G" = {
+    product_name   = "NVIDIA-A10G"
+    instance_types = ["g5.4xlarge"]
   }
   "L4" = {
     product_name   = "NVIDIA-L4"
@@ -34,5 +35,5 @@ additional_gpu_types = {
   }
 }
 
-# Enable all GPU types (default A10G plus types defined above)
+# Enable all GPU types defined above
 node_group_gpu_types = ["T4", "A10G", "T4-4x", "L4", "L4-4x"]
