--- a/examples/aws/eks-private/gpu_instances.tfvars.example
+++ b/examples/aws/eks-private/gpu_instances.tfvars.example
@@ -1,15 +1,12 @@
 # GPU Instance Types for EKS
 #
-# This file contains GPU instance configurations that can be used
-# with the EKS cluster. Use this file directly or copy and modify as needed:
+# This file contains additional GPU instance configurations beyond the default (T4).
+# Use this file directly or copy and modify as needed:
 #
 #   terraform plan -var-file="gpu_instances.tfvars.example"
 #   terraform apply -var-file="gpu_instances.tfvars.example"
-#
-# You can selectively enable specific GPU types by setting the
-# node_group_gpu_types variable.
 
-# GPU types configuration
+# GPU types configuration - node groups will be created for each entry
 gpu_instance_types = {
   "T4" = {
     product_name   = "Tesla-T4"
@@ -32,6 +29,3 @@ gpu_instance_types = {
     instance_types = ["g6.24xlarge"]
   }
 }
-
-# Enable all GPU types defined above
-node_group_gpu_types = ["T4", "A10G", "T4-4x", "L4", "L4-4x"]
