--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -6,3 +6,4 @@
 
 # These owners will be the default owners for everything
 *             @anyscale/fieldteam
+*             @anyscale/public-terraform-owners
