--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -2,7 +2,7 @@ name: Bug Report
 description: Issue/Bug with the Terraform Modules. Please include repro steps!
 title: "[bug]: "
 labels: ["bug", "P1", "terraform-modules"]
-assignees: ["brent-anyscale"]
+assignees: ["anyscale/public-terraform-owners"]
 
 body:
   - type: markdown
